<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTintMode="src_over"
    tools:context=".EditEvent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/event_type"
                android:textColor="@color/white"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/evet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:textSize="20sp"
                tools:text="Events"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/etitle"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/title"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:inputType="text"
            android:id="@+id/evenue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/venue"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            >

            <EditText
                android:inputType="date"
                android:id="@+id/edate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1.5"
                android:hint="@string/date"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/edateic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:src="@drawable/calender"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:contentDescription="@string/Date" />

            <EditText
                android:inputType="time"
                android:id="@+id/etimeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1.5"
                android:hint="@string/time"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/etimeic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.5"
                android:src="@drawable/ic_access_time_black_24dp"
                android:contentDescription="@string/Time" />
        </LinearLayout>

        <EditText
            android:inputType="text"
            android:id="@+id/eclub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/club_chapter"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:inputType="text"
            android:id="@+id/eguest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/guest_speaker"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:inputType="text"
            android:id="@+id/eorg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/Organizer"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:inputType="phone"
            android:id="@+id/econtact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/contact_number"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:inputType="textMultiLine"
            android:id="@+id/edescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/description"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:inputType="text"
            android:id="@+id/elink"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/link"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:inputType="number"
            android:id="@+id/efees"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/fees" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView

                android:id="@+id/eadd_poster"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="match_parent"
                android:tint="@color/white"
                android:src="@drawable/add_image"
                android:contentDescription="@string/add" />

            <TextView
                android:id="@+id/eimg_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:hint="@string/add_poster"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>


            <ImageView
                android:id="@+id/delete_poster"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:tint="@color/white"
                android:src="@drawable/delete"
                android:contentDescription="@string/delete" />
        </LinearLayout>


        <Button
            android:id="@+id/update_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/shape"
            android:text="@string/update_changes" />


    </LinearLayout>


</ScrollView>