<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTintMode="src_over"
    tools:context=".AddEvent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/event_type"
                android:textColor="@color/white"
                android:textSize="20sp" />


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:entries="@array/event"

                />

        </LinearLayout>

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/title"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="text"/>

        <EditText
            android:id="@+id/venue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/venue"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <EditText
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1.5"
                android:hint="@string/date"
                android:inputType="date"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <ImageView
                android:id="@+id/dateic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:src="@drawable/calender"
                android:contentDescription="@string/Date" />

            <EditText
                android:id="@+id/timeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1.5"
                android:hint="@string/time"
                android:inputType="time"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <ImageView
                android:id="@+id/timeic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.5"
                android:src="@drawable/ic_access_time_black_24dp"
                android:contentDescription="@string/Time" />
        </LinearLayout>

        <EditText
            android:id="@+id/club"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/club_chapter"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="text"/>

        <EditText
            android:id="@+id/guest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/guest_speaker"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="text"/>

        <EditText
            android:id="@+id/org"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/Organizer"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="text"/>

        <EditText
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/contact_number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/description"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textMultiLine"/>

        <EditText
            android:inputType="text"
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/link"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/fees"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/fees"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="numberDecimal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <ImageView
                android:id="@+id/add_poster"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/add_image"
                android:tint="@color/white"
                android:contentDescription="@string/add" />

            <TextView
                android:id="@+id/img_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:hint="@string/add_poster"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>


        <Button
            android:id="@+id/add_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/shape"
            android:text="@string/add_event" />


    </LinearLayout>


</ScrollView>