<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#CC000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/remail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
           />

        <EditText
            android:id="@+id/rpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:inputType="textPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
             />

        <Button
            android:background="@drawable/shape"
            android:id="@+id/register_user"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:text="@string/register"
            android:textStyle="bold" />

</LinearLayout>