<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ViewEvent">


    <include layout="@layout/viewevent_content" />

    <View
        android:id="@+id/fabBGLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#26000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/fabLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/standard_23"
        android:layout_marginEnd="@dimen/standard_23"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:padding="@dimen/standard_12"
        android:visibility="gone"
        app:layout_behavior="com.example.acer.vitevents.Utils.MoveUpdwardsBehaviour">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape1"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="5dp"
            android:text="@string/about" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/About"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:tint="@android:color/white"
            app:fabSize="mini"
            app:srcCompat="@drawable/about" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fabLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/standard_23"
        android:layout_marginEnd="@dimen/standard_23"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:padding="@dimen/standard_12"
        android:visibility="gone"
        app:layout_behavior="com.example.acer.vitevents.Utils.MoveUpdwardsBehaviour">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape1"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="5dp"
            android:text="@string/sign_out" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/SignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:tint="@android:color/white"
            app:fabSize="mini"
            app:srcCompat="@drawable/logout" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/fabLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/standard_23"
        android:layout_marginEnd="@dimen/standard_23"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:padding="@dimen/standard_12"
        android:visibility="gone"
        app:layout_behavior="com.example.acer.vitevents.Utils.MoveUpdwardsBehaviour">

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape1"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="5dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/EmailId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:tint="@android:color/white"
            app:fabSize="mini"
            app:srcCompat="@drawable/user" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fabLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/standard_23"
        android:layout_marginEnd="@dimen/standard_23"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:padding="@dimen/standard_12"
        android:visibility="gone"
        app:layout_behavior="com.example.acer.vitevents.Utils.MoveUpdwardsBehaviour">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape1"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="5dp"
            android:text="@string/add_event" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/AddEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:tint="@android:color/white"
            app:fabSize="mini"
            app:srcCompat="@drawable/edit" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:padding="@dimen/standard_12"
        app:layout_behavior="com.example.acer.vitevents.Utils.MoveUpdwardsBehaviour">


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:gravity="center_vertical"
            android:tint="@android:color/white"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_add_black_24dp" />
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>